added ResourceChangeListener that will clear a ClassLoaderCacheEntry on addition of source and output folders